--- a/app/src/main/res/layout/fragment_tab_self_center.xml
+++ b/app/src/main/res/layout/fragment_tab_self_center.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,139 +13,189 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/white">
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical"
-            android:textColorHint="@color/fancy_blue"
-            android:text="个人中心"
-            android:textSize="25sp"
-            android:textStyle="bold">
-        </TextView>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:orientation="horizontal"
-        android:background="@color/white"
-        android:padding="10dp"
-        android:layout_marginTop="5dp">
-        <ImageView
-            android:id="@+id/user_image"
-            android:src="@drawable/ic_user_image"
-            android:layout_width="60dp"
-
-            android:layout_height="match_parent" />
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-                <TextView
-                    android:id="@+id/follow_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="关注：290"
-                    android:gravity="center"
-                    android:layout_marginLeft="10dp">
-
-                </TextView>
-
-                <TextView
-                    android:id="@+id/followed_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="被关注：1443"
-                    android:gravity="center"
-                    android:layout_marginLeft="10dp">
-
-                </TextView>
-            </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/white">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="用户创建于xxxx-xx-xx"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:orientation="horizontal"
                 android:layout_marginLeft="10dp"
-                android:layout_weight="1"></TextView>
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center_vertical"
+                android:textColorHint="@color/fancy_blue"
+                android:text="个人中心"
+                android:textSize="25sp"
+                android:textStyle="bold">
+            </TextView>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:background="@color/white"
+            android:padding="10dp"
+            android:layout_marginTop="5dp">
+            <ImageView
+                android:id="@+id/user_image"
+                android:src="@drawable/ic_user_image"
+                android:layout_width="60dp"
+
+                android:layout_height="match_parent" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+                    <TextView
+                        android:id="@+id/follow_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="关注：290"
+                        android:gravity="center"
+                        android:layout_marginLeft="10dp">
+
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/followed_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="被关注：1443"
+                        android:gravity="center"
+                        android:layout_marginLeft="10dp">
+
+                    </TextView>
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="用户创建于xxxx-xx-xx"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"></TextView>
+
+
+
+            </LinearLayout>
 
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/center_introduction"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:text="用户简介"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/notice_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/dark_blue"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:text="通知栏：去查看通知吧！"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textColor="@color/fancy_white"
+            >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/draft_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/aquamarine"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:text="草稿箱：去查看草稿吧！"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textColor="@color/fancy_white"
+            >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/account_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/SeaGreen1"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:text="账户栏：修改账户信息！"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textColor="@color/fancy_white"
+            >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/follow_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/yellow_green"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:text="关注列表：查看关注的用户！"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textColor="@color/fancy_white"
+            >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/followed_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/yellow"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:text="粉丝列表：查看你的粉丝们！"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textColor="@color/fancy_white"
+            >
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/block_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/dark_red"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:text="黑名单：查看屏蔽的用户！"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:textColor="@color/fancy_white"
+            >
+
+        </TextView>
+
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/center_introduction"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:text="用户简介"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"
-        >
-
-    </TextView>
-
-    <TextView
-        android:id="@+id/notice_button"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/aquamarine"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"
-        android:text="通知栏：去查看通知吧！"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:textColor="@color/fancy_white"
-        >
-
-    </TextView>
-
-    <TextView
-        android:id="@+id/draft_button"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/DarkSeaGreen1"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"
-        android:text="草稿箱：去查看草稿吧！"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:textColor="@color/fancy_white"
-        >
-
-    </TextView>
-
-    <TextView
-        android:id="@+id/account_button"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/SeaGreen1"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"
-        android:text="账户栏：修改账户信息！"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:textColor="@color/fancy_white"
-        >
-
-    </TextView>
-
-
-
-
-</LinearLayout>
+</ScrollView>
