--- a/app/src/main/res/layout/postlist_item.xml
+++ b/app/src/main/res/layout/postlist_item.xml
@@ -28,6 +28,20 @@
             android:layout_marginLeft="10dp">
 
         </TextView>
+
+        <TextView
+            android:id="@+id/follow_condition"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="已关注"
+            android:gravity="center"
+            android:layout_marginLeft="10dp"
+            android:background="@color/gold"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            >
+
+        </TextView>
     </LinearLayout>
 
     <TextView
