--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -150,7 +150,51 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/center_current_introduction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:text="当前密码："
+        android:layout_marginTop="10dp"
+        android:padding="10dp"
+        android:textSize="15sp"
+        >
 
+    </TextView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:background="@color/white">
+        <EditText
+            android:id="@+id/edit_introduction"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center_vertical"
+            android:hint="请输入新介绍"
+            android:inputType="text"
+            android:textColor="@color/teal_700"
+            android:textColorHint="@color/fancy_blue"
+            android:layout_weight="2"
+            style="@style/MyEditStyle">
+        </EditText>
+
+        <ImageView
+            android:id="@+id/confirm_introduction"
+            android:src="@drawable/ic_confirm"
+            android:layout_width="40dp"
+
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"/>
+
+    </LinearLayout>
 
 
 </LinearLayout>
