--- a/app/src/main/res/layout/activity_detailed_item.xml
+++ b/app/src/main/res/layout/activity_detailed_item.xml
@@ -110,6 +110,25 @@
 
         </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <EditText
+            android:layout_width="240dp"
+            android:layout_height="50dp"
+            android:id="@+id/send_content"
+            android:hint="在此处发表你的评论吧"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:id="@+id/comment_send"
+            android:text="发布"
+            style="@style/LyqBtnStyle"/>
+    </LinearLayout>
+
     <include layout="@layout/comment_list"/>
 
 </LinearLayout>
