--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -32,11 +32,18 @@
         <TextView
             android:id="@+id/comment_time"
             style="@style/post_content"/>
+
     </LinearLayout>
 
     <TextView
         android:id="@+id/comment_content"
         style="@style/post_content"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/delete_button"
+        android:text="删除评论"/>
 
 
     <View
