--- a/app/src/main/res/layout/activity_item_create.xml
+++ b/app/src/main/res/layout/activity_item_create.xml
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:id="@+id/geo_str"
             android:text="点击此处获取位置信息"/>
     </LinearLayout>
@@ -75,24 +75,36 @@
         <Spinner
             android:id="@+id/item_types"
             android:layout_width="wrap_content"
+            android:layout_weight="0"
             android:layout_height="50dp"
             android:entries="@array/item_types"/>
         <Button
             android:id="@+id/save_button"
-            android:text="保存为草稿"
+            android:text="保存"
+            android:layout_weight="25"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             />
         <Button
             android:id="@+id/send_button"
-            android:text="动态发布"
+            android:text="发布"
+            android:layout_weight="25"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="30dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             />
+        <Button
+            android:text="删除"
+            android:background="@color/dark_red"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="25"
+            android:id="@+id/delete_button"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"/>
     </LinearLayout>
 
 
